--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.10.4",
     "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.27.0",
     "next": "9.4.4",
     "next-with-apollo": "^5.1.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
