--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
-    "react-moment": "^0.9.7"
+    "react-moment": "^0.9.7",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.3.0",
